--- a/templates/tweindex.html
+++ b/templates/tweindex.html
@@ -5,9 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-<form action="{% url "topay" %}">
+<form action="{% url "topay" %}" method="post">
     {% csrf_token %}
-    <input type="text" name="m">
+    <input type="text" name="many" id="many">
     <input type="submit" value="支付">
 </form>
 </body>
